2008-08-11  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylibm.el (ti::fboundp-check-autoload): Update to modern backquote.
	(ti::narrow-safe): Update to modern backquote.
	(ti::narrow-to-paragraph): Update to modern backquote.
	(ti::nconc): Update to modern backquote.
	(ti::when-package): Update to modern backquote.
	(ti::with-require): Update to modern backquote.
	(ti::with-time-this): Update to modern backquote.
	(ti::with-coding-system-raw-text): Update to modern backquote.
	(ti::verb): Update to modern backquote.
	(int-to-float): Update to modern backquote.
	(ti::dotimes): Update to modern backquote.
	(ti::funcall): Update to modern backquote.
	(ti::d!): Update to modern backquote.
	(ti::d!!): Update to modern backquote.
	(ti::applycar): Update to modern backquote.
	(ti::print-p): Update to modern backquote.
	(ti::assoc-append-inside): Update to modern backquote.
	(ti::byte-compile-defun-compiled-p): Update to modern backquote.
	(ti::byte-compile-defun-maybe): Update to modern backquote.
	(ti::package-use-dynamic-compilation): Update to modern backquote.
	(ti::package-require-for-emacs): Update to modern backquote.
	(ti::package-require-view): Update to modern backquote.
	(ti::package-package-require-timer): Update to modern backquote.
	(ti::package-require-mail-abbrevs): Update to modern backquote.
	(ti::use-file-compression): Update to modern backquote.
	(ti::define-key-if-free): Update to modern backquote.
	(ti::copy-key-definition): Update to modern backquote.
	(ti::keep-lower-order): Update to modern backquote.
	(ti::bool-toggle): Update to modern backquote.
	(ti::dolist-buffer-list): Update to modern backquote.
	(ti::vector-table-init): Update to modern backquote.
	(ti::vector-table-get): Update to modern backquote.
	(ti::vector-table-clear): Update to modern backquote.
	(ti::load-file-with-wrapper): Update to modern backquote.
	(ti::write-file-as-is-macro): Update to modern backquote.
	(ti::directory-recursive-macro): Update to modern backquote.